--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     body {
-      background-image: url('background.jpg');
+      background-image: url(https://raw.githubusercontent.com/SuperCleanNFT/SuperCleanMachine/main/SuperClean%20Graffiti.png?token=GHSAT0AAAAAACCP5LGK2325DUTJVLVMELWKZC4MM5Q);
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
@@ -50,7 +50,7 @@
     <div id="result"></div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <script src="https://raw.githubusercontent.com/SuperCleanNFT/SuperCleanMachine/main/sketch.js"></script>
   <script src="sketch.js"></script>
 </body>
 </html>
